# diploma_program

./: README.md  output.docx  pyproject.toml  starter.py  test1.py
models/: calculation_scope.py  equation.py
utils/: graph_utils.py  matrix_parts.py  solver.py
